Updating the Sass with some common partials and base styles

--- a/assets/css/sass/wimp-member-directory.scss
+++ b/assets/css/sass/wimp-member-directory.scss
@@ -6,4 +6,9 @@
  * Licensed under the GPLv2+ license.
  */
 
+@import "variables";
+@import "mixins";
+
+@import "global";
+@import "archive";
 @import "vendor/flexslider";
