Updating/Fixing Flexslider slide buttons to reflect our design mocks

--- a/assets/css/wimp-member-directory.css
+++ b/assets/css/wimp-member-directory.css
@@ -144,8 +144,8 @@
     overflow: hidden;
     opacity: 0;
     cursor: pointer;
-    color: rgba(0, 0, 0, 0.8);
-    text-shadow: 1px 1px 0 rgba(255, 255, 255, 0.3);
+    color: rgba(255, 255, 255, 0.3);
+    text-shadow: 1px 1px 0 rgba(0, 0, 0, 0.5);
     -webkit-transition: all 0.3s ease-in-out;
     -moz-transition: all 0.3s ease-in-out;
     -ms-transition: all 0.3s ease-in-out;
@@ -154,10 +154,13 @@
     .flex-direction-nav a:before {
       font-family: "flexslider-icon";
       font-size: 40px;
+      line-height: 40px;
       display: inline-block;
       content: '\f001'; }
     .flex-direction-nav a.flex-next:before {
       content: '\f002'; }
+    .flex-direction-nav a:hover, .flex-direction-nav a:focus {
+      color: rgba(255, 255, 255, 0.75) !important; }
   .flex-direction-nav .flex-prev {
     left: -50px; }
   .flex-direction-nav .flex-next {
