Fine tuning the header section of the large listing

--- a/assets/css/sass/_archive.scss
+++ b/assets/css/sass/_archive.scss
@@ -8,12 +8,15 @@
 }
 .listing-header {
 	@include clearfix();
+	margin-bottom:7px;
 	.listing-name, .member-meta {
 		float: left;
 		width: 50%;
 	}
 	.member-meta {
 		text-align: right;
+		position:relative;
+		top:28px;
 		ul {
 			list-style: none;
 			margin:0;
