--- a/assets/css/wimp-member-directory.css
+++ b/assets/css/wimp-member-directory.css
@@ -15,23 +15,27 @@
   padding: 13px;
   color: #242628; }
 
-.listing-header:after {
-  content: "";
-  display: table;
-  clear: both; }
-.listing-header .listing-name, .listing-header .member-meta {
-  float: left;
-  width: 50%; }
-.listing-header .member-meta {
-  text-align: right; }
-  .listing-header .member-meta ul {
-    list-style: none;
-    margin: 0;
-    padding: 0; }
-  .listing-header .member-meta .wmd-cost {
-    font-weight: bold;
-    font-size: 24px;
-    font-size: 1.5rem; }
+.listing-header {
+  margin-bottom: 7px; }
+  .listing-header:after {
+    content: "";
+    display: table;
+    clear: both; }
+  .listing-header .listing-name, .listing-header .member-meta {
+    float: left;
+    width: 50%; }
+  .listing-header .member-meta {
+    text-align: right;
+    position: relative;
+    top: 28px; }
+    .listing-header .member-meta ul {
+      list-style: none;
+      margin: 0;
+      padding: 0; }
+    .listing-header .member-meta .wmd-cost {
+      font-weight: bold;
+      font-size: 24px;
+      font-size: 1.5rem; }
 
 /*
  * jQuery FlexSlider v2.2.0
