--- a/assets/css/sass/_archive.scss
+++ b/assets/css/sass/_archive.scss
@@ -6,25 +6,44 @@
 	padding:13px;
 	color:#242628;
 }
+
 .listing-header {
 	@include clearfix();
 	margin-bottom:7px;
+
 	.listing-name, .member-meta {
-		float: left;
-		width: 50%;
+		@include columnize( 50 );
 	}
+
 	.member-meta {
+		@include reset-url();
 		text-align: right;
 		position:relative;
 		top:28px;
-		ul {
-			list-style: none;
-			margin:0;
-			padding:0;
-		}
+
 		.wmd-cost {
-			font-weight: bold;
 			@include rem-fallback( 'font-size', divide-by-base( 15 ) );
+			font-weight: bold;
 		}
+	}
+}
+
+.directory-archive-meta {
+	@include clearfix();
+	@include rem-fallback( 'font-size', divide-by-base( 12 ) );
+	color:#5e5b5b;
+
+	a {
+		color:#242628;
+	}
+
+	.column {
+		@include columnize( 50 );
+		@include reset-url();
+	}
+
+	td:first-child {
+		@include calc-value-by( 'margin-right', 5, 409, 'em' ); // 20px / 490px = 4.88998%
+		display:block;
 	}
 }
