--- a/assets/css/wimp-member-directory.css
+++ b/assets/css/wimp-member-directory.css
@@ -33,9 +33,30 @@
       margin: 0;
       padding: 0; }
     .listing-header .member-meta .wmd-cost {
-      font-weight: bold;
       font-size: 24px;
-      font-size: 1.5rem; }
+      font-size: 1.5rem;
+      font-weight: bold; }
+
+.directory-archive-meta {
+  font-size: 19.2px;
+  font-size: 1.2rem;
+  color: #5e5b5b; }
+  .directory-archive-meta:after {
+    content: "";
+    display: table;
+    clear: both; }
+  .directory-archive-meta a {
+    color: #242628; }
+  .directory-archive-meta .column {
+    float: left;
+    width: 50%; }
+    .directory-archive-meta .column ul {
+      list-style: none;
+      margin: 0;
+      padding: 0; }
+  .directory-archive-meta td:first-child {
+    margin-right: 1.22249em;
+    display: block; }
 
 /*
  * jQuery FlexSlider v2.2.0
@@ -106,7 +127,7 @@
  * DEFAULT THEME
  * ====================================================================================================================*/
 .flexslider {
-  margin: 0 0 60px;
+  margin: 0;
   background: #fff;
   border: 4px solid #fff;
   position: relative;
