--- a/assets/css/sass/_archive.scss
+++ b/assets/css/sass/_archive.scss
@@ -5,6 +5,7 @@
 	border: 1px solid #828588;
 	padding:13px;
 	color:#242628;
+	margin-bottom:13px;
 }
 
 .listing-header {
@@ -43,7 +44,34 @@
 	}
 
 	td:first-child {
-		@include calc-value-by( 'margin-right', 5, 409, 'em' ); // 20px / 490px = 4.88998%
+		@include calc-value-by( 'margin-right', 5, 409, 'em' ); // 20px / 490px = 4.88998em
 		display:block;
+	}
+}
+
+.listing-cta {
+	@include clearfix();
+	a {
+		@include columnize( 47.92 );
+		@include gradient-vertical();
+		@include rem-fallback( 'font-size', divide-by-base( 14 ) );
+		margin:10px 0 0;
+		border-radius:3px;
+		padding:16px;
+		color:$white;
+		text-align:center;
+		text-shadow:1px 1px 0px rgba( 35, 31, 32, .35 );
+		text-transform: uppercase;
+
+		&:hover {
+			color:$white;
+		}
+
+		&:first-child {
+			@include calc-value-by( 'margin-right', 8.5, 409 ); // 8.5px / 409px = 2.0782396%
+		}
+		&:last-child {
+			@include calc-value-by( 'margin-left', 8.5, 409 ); // 8.5px / 409px = 2.0782396%
+		}
 	}
 }
