WIMP+ views integrated into BuddyPress

--- a/assets/css/sass/wimp-member-directory.scss
+++ b/assets/css/sass/wimp-member-directory.scss
@@ -1,7 +1,17 @@
-/**
- * WIMP Member Directory
- * http://beawimp.org/member-directory
- *
- * Copyright (c) 2014 Cole Geissinger
- * Licensed under the GPLv2+ license.
- */
+.wmd-custom-style {
+	margin-bottom:20px;
+	thead {
+		tr {
+			border-bottom:1px solid #333;
+		}
+		th {
+			padding-bottom:5px;
+		}
+	}
+	tbody tr:first-child td {
+		padding:5px 0;
+	}
+}
+.invoice-nav {
+	margin-top:20px;
+}
