Listings are now saving, need to building ajax notifications.

--- a/assets/css/sass/_listing_manager.scss
+++ b/assets/css/sass/_listing_manager.scss
@@ -37,11 +37,10 @@
 		font-size:15px;
 	}
 	.two-column-form {
-		input[type="number"] {
+		select {
 			width:42.5%;
-		}
-		input[type="text"] {
-			width:43.5%;
+			margin-bottom:10px;
+			height:30px;
 		}
 	}
 	div > label:first-child {
