--- a/assets/css/wimp-member-directory.css
+++ b/assets/css/wimp-member-directory.css
@@ -381,6 +381,8 @@
   height: 200px; }
 #buddypress #wmd-listings #wp-content-editor-container {
   border: 1px solid #E5E5E5; }
+#buddypress #wmd-listings .portfolio-wrapper {
+  margin-bottom: 10px; }
 #buddypress #wmd-listings .media-upload input[type="text"], #buddypress #wmd-listings input[type="url"]#url {
   width: 88%; }
 #buddypress #wmd-listings .add-new {
@@ -412,7 +414,7 @@
   #buddypress #wmd-listings .wmd-notification.wmd-success {
     color: #3c763d;
     background-color: #dff0d8;
-    border-color: #d639c6; }
+    border-color: #3c763d; }
 
 .wmd-custom-style {
   margin-bottom: 20px; }
