Adding some finalized styling to the listing form

--- a/assets/css/sass/_listing_manager.scss
+++ b/assets/css/sass/_listing_manager.scss
@@ -29,6 +29,10 @@
 	.portfolio-wrapper {
 		margin-bottom:10px;
 	}
+	.description p {
+		@include rem-fallback( 'font-size', divide-by-base( 12 ) );
+		margin-bottom:5px;
+	}
 	.media-upload input[type="text"], input[type="url"]#url {
 		width:88%;
 	}
