Fixing screen reader text in media uploader

--- a/assets/css/wimp-member-directory.css
+++ b/assets/css/wimp-member-directory.css
@@ -244,6 +244,18 @@
   .flex-direction-nav .flex-next {
     opacity: 1;
     right: 10px; } }
+.screen-reader-text,
+.screen-reader-text span,
+.ui-helper-hidden-accessible {
+  position: absolute;
+  margin: -1px;
+  padding: 0;
+  height: 1px;
+  width: 1px;
+  overflow: hidden;
+  clip: rect(0 0 0 0);
+  border: 0; }
+
 .wimp-member-listing {
   font-size: 24px;
   font-size: 1.5rem;
