Removing the fixed height on select2

--- a/assets/css/wimp-member-directory.css
+++ b/assets/css/wimp-member-directory.css
@@ -379,8 +379,7 @@
 
 #buddypress #wmd-listings .select2-container {
   width: 88% !important;
-  margin-bottom: 10px;
-  height: 30px; }
+  margin-bottom: 10px; }
   #buddypress #wmd-listings .select2-container input[type="search"] {
     border: none;
     background: transparent;
