--- a/assets/css/sass/_global.scss
+++ b/assets/css/sass/_global.scss
@@ -2,11 +2,21 @@
 .screen-reader-text span,
 .ui-helper-hidden-accessible {
 	position: absolute;
-	margin: -1px;
-	padding: 0;
-	height: 1px;
-	width: 1px;
+	margin:   -1px;
+	padding:  0;
+	height:   1px;
+	width:    1px;
 	overflow: hidden;
-	clip: rect(0 0 0 0);
-	border: 0;
+	clip:     rect(0 0 0 0);
+	border:   0;
+}
+
+.full-banner {
+	background-color: rgba(66, 139, 202, .1);
+	width:            75%;
+	border-bottom:    1px solid rgba(66, 139, 202, .2);
+	a {
+		display: block;
+		padding: 10px;
+	}
 }
