--- a/assets/css/wimp-member-directory.css
+++ b/assets/css/wimp-member-directory.css
@@ -256,6 +256,14 @@
   clip: rect(0 0 0 0);
   border: 0; }
 
+.full-banner {
+  background-color: rgba(66, 139, 202, 0.1);
+  width: 75%;
+  border-bottom: 1px solid rgba(66, 139, 202, 0.2); }
+  .full-banner a {
+    display: block;
+    padding: 10px; }
+
 .wimp-member-listing {
   font-size: 24px;
   font-size: 1.5rem;
