--- a/assets/css/sass/_listing_manager.scss
+++ b/assets/css/sass/_listing_manager.scss
@@ -99,4 +99,13 @@
 			border-color:#3c763d;
 		}
 	}
+	.loading {
+		display:none;
+		font-size:12px;
+		padding-top:2px;
+		img {
+			width:15px;
+			height:15px;
+		}
+	}
 }
