Finial adjustments for WIMP+ launch

--- a/assets/css/wimp-member-directory.css
+++ b/assets/css/wimp-member-directory.css
@@ -377,7 +377,7 @@
       color: #594f4a; }
 
 #buddypress div.item-list-tabs ul li a {
-  padding: 5px 6px; }
+  padding: 5px; }
 
 #buddypress #wmd-listings input[type="text"], #buddypress #wmd-listings input[type="url"] {
   outline: none; }
